--- a/admin/admin.html
+++ b/admin/admin.html
@@ -23,7 +23,7 @@
       referrerpolicy="no-referrer"
     />
    
-    <link rel="stylesheet" href="../css/admin.css">
+    <link rel="stylesheet" href="/assets/css/admin.css">
   </head>
   <body>
     <div class="app">
@@ -37,7 +37,7 @@
                  
                 </li>
                 <li>
-                  <a href="./user-management.html" class="active"
+                  <a href="/admin/user-management.html" class="active"
                     >Người dùng</a
                   >
                 </li>
@@ -59,7 +59,7 @@
                   >
                 </li>
 <li>
-                  <a href="../html/login.html"
+                  <a href="/auth/login.html/index.html"
                     ><i class="fa-solid fa-arrow-right-from-bracket"></i
                     >Logout</a
                   >
@@ -168,6 +168,7 @@
       </section>
     </div>
 
-    <script ></script>
+    <script src="/utils/method.js"></script>
+    <script src="/"></script>
   </body>
 </html>
