--- a/auth/login.html/index.html
+++ b/auth/login.html/index.html
@@ -16,10 +16,10 @@
     <!-- BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- APP CSS -->
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../../assets/css/login.css">
 </head>
 
-<body style="background-image: url(../img/jeong-tae-bae-YcprzitnQH8-unsplash.jpg);">
+<body style="background-image: url(../../assets/img/jeong-tae-bae-YcprzitnQH8-unsplash.jpg);">
 
     <form class="form" id="form-login">
         <div class="form-group">
@@ -54,7 +54,7 @@
         </div>
         <span class="form-txt">
             Don't have an account?
-            <a href="./register.html">Sign up!</a>
+            <a href="/auth/register.html/index.html">Sign up!</a>
         </span>
         <span class="form-txt">
             <a href="#">Forgot password?</a>
@@ -62,7 +62,7 @@
     </form>
 
     <!-- APP JS -->
-    <script src="../js/login.js"></script>
+    <script src="/assets/js/login.js"></script>
 
 </body>
 
