--- a/auth/register.html/index.html
+++ b/auth/register.html/index.html
@@ -16,10 +16,10 @@
     <!-- BOXICONS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <!-- login CSS -->
-    <link rel="stylesheet" href="../css/register.css">
+    <link rel="stylesheet" href="/assets/css/register.css">
 </head>
 
-<body style="background-image: url(../img/jeong-tae-bae-YcprzitnQH8-unsplash.jpg);">
+<body style="background-image: url(/assets/img/jeong-tae-bae-YcprzitnQH8-unsplash.jpg);">
 
     <form class="form" id="form-register">
         <div class="form-group">
@@ -45,7 +45,7 @@
         <button class="form-btn" id="signin-btn">Register</button>
     </form>
 
-    <script src="../js/register.js"></script>
+    <script src="/assets/js/register.js"></script>
 
 </body>
 
