--- a/pages/product/detail-product.html
+++ b/pages/product/detail-product.html
@@ -43,18 +43,20 @@
             <ul class="nav d-flex justify-content-between align-items-center">
 
               <li class="nav-bar-item">
-                <a href="./card.html">
-                  <i class="fa fa-shopping-cart"></i><span id="quantity-number">(0)</span>
+                <a href="/pages/user/cart/index.html">
+                  <i class="fa fa-shopping-cart"><span> </span>
+                    <span id="number-cart">1</span>
+                  </i>
                 </a>
               </li>
               <li class="nav-bar-item">
-                <a href="../html/san-pham-yeu-thich.html">
+                <a href="/pages/product/san-pham-yeu-thich.html">
                   <i class="fa fa-heart"></i>
                   Yêu thích
                 </a>
               </li>
               <li class="nav-bar-item" id="info-user">
-                <a href="./login.html">
+                <a href="/auth/login.html/index.html">
                   <i class="fa fa-user"></i>
                   Tài khoản
                 </a>
@@ -121,8 +123,8 @@
             <img src="../../assets/img/2010-anh-tac-dung-17072021 (1).jpg" class="d-block" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="../../assets/img/2010-skin-perfecting-2-bha-liquid-exfoliant-slide-4-30102020.jpg.webp" class="d-block"
-              alt="..." />
+            <img src="../../assets/img/2010-skin-perfecting-2-bha-liquid-exfoliant-slide-4-30102020.jpg.webp"
+              class="d-block" alt="..." />
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -221,8 +223,9 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
-  <script src="../js/product-detail.js"></script>
-  <script src="../js/check-login.js"></script>
+  <script src="/assets/js/product-detail.js"></script>
+  <script src="/assets/js/check-login.js"></script>
+  <script src="/components/displayQuantityCart.js"></script>
 
 
 </body>
