--- a/user/account.html/account.html
+++ b/user/account.html/account.html
@@ -1,94 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-</head><link rel="stylesheet" href="../css/account.css">
-
-<body>
-  <div class="main-navbar">
-    <div class="top-navbar">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 my-auto d-none d-sm-none d-md-block d-lg-block">
-                    <a href="/" class="brand-name">PiTi Cosmetic</a>
-                </div>
-                <div class="col-md-4 my-auto">
-                    <form role="search">
-                        <div class="input-group">
-                            <input type="search" placeholder="Tìm kiếm sản phẩm" class="form-control" />
-                            <button class="btn bg-white" type="submit">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-5 my-auto">
-                    <ul class="nav d-flex justify-content-between align-items-center">
-
-                        <li class="nav-bar-item">
-                            <a href="./card.html">
-                                <i class="fa fa-shopping-cart"></i>(0)
-                            </a>
-                        </li>
-                        <li class="nav-bar-item">
-                            <a href="./sanphamyeuthich.html">
-                                <i class="fa fa-heart"></i>
-                                Yêu thích
-                            </a>
-                        </li>
-                        <li class="nav-bar-item">
-                            <a href="./login.html">
-                                <i class="fa fa-user"></i>
-                                Tài khoản
-                            </a>
-
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand d-block d-sm-block d-md-none d-lg-none" href="#">
-                PiTi Cosmetic
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="navbar-midle-item">
-                        <a href="./html/gioi-thieu.html">Giới thiệu</a>
-                    </li>
-
-                    <li class="navbar-midle-item">
-                        <a href="./html/san-pham.html">Sản phẩm</a>
-                    </li>
-                    <li class="navbar-midle-item">
-                        <a href="./html/thanhphan.html">Thành phần</a>
-                    </li>
-                    <li class="navbar-midle-item">
-                        <a href="./html/kienthuchamsocda.html">Kiến thức chăm sóc da</a>
-                    </li>
-                    <li class="navbar-midle-item">
-                        <a href="./html/khuyenmai.html">Khuyến mại</a>
-                    </li>
-                    <li class="navbar-midle-item">
-                        <a href="./html/tintuc.html">Tin tức</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-</div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/assets/css/account.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <!-- Link đến Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>PiTi Cosmetic</title>
+  </head>
     <div class="main-content">
         <div class="container mt-7">
           <!-- Table -->
