--- a/admin/orders.html
+++ b/admin/orders.html
@@ -14,8 +14,8 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="../css/admin.css">
-    <link rel="stylesheet" href="../css/orders.css">
+    <link rel="stylesheet" href="/admin.css">
+    <link rel="stylesheet" href="/admin/">
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                                 <a href="./vouchers.html">Vouchers</a>
                             </li>
                             <li>
-                                <a href="./login.html"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
+                                <a href="/auth/login.html/index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
                             </li>
                         </ul>
                     </div>
