--- a/admin/user-management.html
+++ b/admin/user-management.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="../css/user-management.css">
-  <link rel="stylesheet" href="../css/admin.css">
+  <link rel="stylesheet" href="/assets/css/user-management.css">
+  <link rel="stylesheet" href="../assets/css/admin.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                 <a href="./vouchers.html">Vouchers</a>
               </li>
               <li>
-                <a href="./login.html"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
+                <a href="/auth/login.html/index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i>Logout</a>
               </li>
             </ul>
           </div>
@@ -49,25 +49,25 @@
             <div class="users">
               <h3>Quản lý người dùng</h3>
               <div class="list-manager">
-                <form action="" class="search-account" id="search-user">
-                  <input type="text" />
-                  <button type="">
+                <div  class="search-account" id="search-user">
+                  <input type="text" id="input-search-user" placeholder="Tìm kiếm người dùng" />
+                  <button type="button" onclick="searchUser ()">
                     <i class="fa-solid fa-magnifying-glass"></i>
                   </button>
-                </form>
-                <table class="table-manager" id="list-user">
+                </div>
+                <table class="table-manager">
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Tên đăng nhập</th>
+                
                       <th>Email</th>
                       <th>Tên người dùng</th>
-                      <th>Vai trò</th>
-                      <th>Trạng thái</th>
+                      <th>Địa chỉ</th>
+                      <th>Gioi tính</th>
                       <th>Action</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody  id="list-user">
                     <tr>
                       <td>1</td>
                       <td>huongle123</td>
@@ -122,8 +122,8 @@
                 <input type="tel" class="form-control" id="phone" placeholder="Enter phone">
             </div>
             <div class="mb-3">
-                <label for="status" class="form-label">Status</label>
-                <input type="tel" class="form-control" id="status" placeholder="Status">
+                <label for="gender" class="form-label">Giới tính</label>
+                <input type="text" class="form-control" id="gender" placeholder="Gender">
             </div>
         </form>
         </div>
@@ -133,9 +133,9 @@
       </div>
     </div>
   </div>
-
-  <script src="../js/user-managerment.js"></script>
-  <script src="../data/database.js"></script>
+<script src="/utils/method.js"></script>
+  <script src="/assets/js/user-managerment.js"></script>
+  <script src="/models/data/data.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
