--- a/pages/product/gioi-thieu.html
+++ b/pages/product/gioi-thieu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../assets/css/index.css">
+    <link rel="stylesheet" href="../../assets/css/index.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Link đến Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -42,7 +42,9 @@
 
                             <li class="nav-bar-item">
                                 <a href="../user/cart/index.html">
-                                    <i class="fa fa-shopping-cart"></i>(0)
+                                    <i class="fa fa-shopping-cart"><span> </span>
+                                        <span id="number-cart">1</span>
+                                    </i>
                                 </a>
                             </li>
                             <li class="nav-bar-item">
@@ -51,7 +53,7 @@
                                     Yêu thích
                                 </a>
                             </li>
-                            <li class="nav-bar-item"id="info-user">
+                            <li class="nav-bar-item" id="info-user">
                                 <a href="../../user/account.html/account.html">
                                     <i class="fa fa-user"></i>
                                     Tài khoản
@@ -78,7 +80,7 @@
                         <li class="navbar-midle-item">
                             <a href="../../pages/product/gioi-thieu.html">Giới thiệu</a>
                         </li>
-                       
+
                         <li class="navbar-midle-item">
                             <a href="../../pages/product/san-pham.html">Sản phẩm</a>
                         </li>
