--- a/pages/user/cart/index.html
+++ b/pages/user/cart/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="../css/card.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="../../../assets/css/index.css">
-   <link rel="stylesheet" href="../../../assets/css/card.css">
+    <link rel="stylesheet" href="../../../assets/css/index.css">
+    <link rel="stylesheet" href="../../../assets/css/card.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Link đến Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -46,11 +46,13 @@
                             <li class="nav-bar-item">
                                 <a href="./card.html">
 
-                                    <i class="fa fa-shopping-cart"></i>(0)
+                                    <i class="fa fa-shopping-cart"><span> </span>
+                                        <span id="number-cart">1</span>
+                                    </i>
                                 </a>
                             </li>
                             <li class="nav-bar-item">
-                                <a href="./san-pham-yeu-thich.html">
+                                <a href="/pages/product/san-pham-yeu-thich.html">
                                     <i class="fa fa-heart"></i>
                                     Yêu thích
                                 </a>
@@ -274,8 +276,8 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 
-<script src="../js/cart.js"></script>
+<script src="/assets/js/cart.js"></script>
 
-<script src="../js/check-login.js"></script>
+<script src="/assets/js/check-login.js"></script>
 
 </html>
