--- a/pages/product/detail-product.html
+++ b/pages/product/detail-product.html
@@ -223,11 +223,13 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
 
-  <script src="/assets/js/product-detail.js"></script>
-  <script src="/assets/js/check-login.js"></script>
-  <script src="/components/displayQuantityCart.js"></script>
+
 
 
 </body>
+<script src="/assets/js/product-detail.js"></script>
+<script src="/assets/js/check-login.js"></script>
+<script src="/components/displayQuantityCart.js"></script>
+<script src="/utils/method.js"></script>
 
 </html>
