--- a/pages/user/cart/index.html
+++ b/pages/user/cart/index.html
@@ -86,7 +86,7 @@
                         </li>
 
                         <li class="navbar-midle-item">
-                            <a href="./san-pham.html">Sản phẩm</a>
+                            <a href="/pages/product/san-pham.html">Sản phẩm</a>
                         </li>
                         <li class="navbar-midle-item">
                             <a href="./thanh-phan.html">Thành phần</a>
