--- a/pages/product/san-pham.html
+++ b/pages/product/san-pham.html
@@ -208,6 +208,7 @@
     <script src="/assets/js/product.js"></script>
     <script src="/assets/js/check-login.js"></script>
     <script src="/components/displayQuantityCart.js"></script>
+    <script src="/utils/method.js"></script>
 
 </body>
 
