--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li class="nav-bar-item">
                 <a href="./pages/user/cart/index.html">
                   <i class="fa fa-shopping-cart"><span> </span>
-                    <span id="number-cart">1</span>
+                    <!-- <span id="number-cart">1</span> -->
                   </i>
                 </a>
               </li>
@@ -179,7 +179,7 @@
           </button>
 
           <!-- Nút "Xem thêm" bên phải màu xám (grey) -->
-          <button id="load-more-right" class="btn btn-secondary">
+          <button id="load-more-right" class="btn btn-secondary btn-seeMore">
             <a href="./kemduongam-product.html">Xem thêm</a>
           </button>
         </div>
