--- a/pages/product/detail-product.html
+++ b/pages/product/detail-product.html
@@ -45,7 +45,7 @@
               <li class="nav-bar-item">
                 <a href="/pages/user/cart/index.html">
                   <i class="fa fa-shopping-cart"><span> </span>
-                    <span id="number-cart">1</span>
+                    <!-- <span id="number-cart">1</span> -->
                   </i>
                 </a>
               </li>
