--- a/pages/product/san-pham.html
+++ b/pages/product/san-pham.html
@@ -32,8 +32,8 @@
                     <form role="search">
                         <div class="input-group">
                             <input type="search" placeholder="Tìm kiếm sản phẩm" class="form-control" id="input-search"
-                                onchange="handleSearch()" />
-                            <button class="btn bg-white" type="submit">
+                                />
+                            <button class="btn bg-white" type="button" onclick="searchProduct()" >
                                 <i class="fa fa-search"></i>
                             </button>
                         </div>
@@ -45,7 +45,7 @@
                         <li class="nav-bar-item">
                             <a href="../user/cart/index.html">
                                 <i class="fa fa-shopping-cart"><span> </span>
-                                    <span id="number-cart">1</span>
+                                    <!-- <span id="number-cart">1</span> -->
                                 </i>
                             </a>
                         </li>
