--- a/pages/user/cart/index.html
+++ b/pages/user/cart/index.html
@@ -47,7 +47,7 @@
                                 <a href="./card.html">
 
                                     <i class="fa fa-shopping-cart"><span> </span>
-                                        <span id="number-cart">1</span>
+                                        <!-- <span id="number-cart">1</span> -->
                                     </i>
                                 </a>
                             </li>
