--- a/pages/product/san-pham-yeu-thich.html
+++ b/pages/product/san-pham-yeu-thich.html
@@ -31,7 +31,7 @@
                         <form role="search">
                             <div class="input-group">
                                 <input type="search" placeholder="Tìm kiếm sản phẩm" class="form-control" />
-                                <button class="btn bg-white" type="submit">
+                                <button class="btn bg-white" type="button" >
                                     <i class="fa fa-search"></i>
                                 </button>
                             </div>
