--- a/admin/orders.html
+++ b/admin/orders.html
@@ -14,8 +14,9 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/admin.css">
-    <link rel="stylesheet" href="/admin/">
+   
+  <link rel="stylesheet" href="/assets/css/admin.css">
+
 </head>
 
 <body>
