--- a/pages/product/gioi-thieu.html
+++ b/pages/product/gioi-thieu.html
@@ -1,70 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/index.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Link đến Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <title>PiTi Cosmetic</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <!-- Link đến Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/assets/css/index.css">
 
-
-
+  <title>PiTi Cosmetic</title>
 </head>
 
 <body>
-
-    <div class="main-navbar">
-        <div class="top-navbar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 my-auto d-none d-sm-none d-md-block d-lg-block">
-                        <a href="../../index.html" class="brand-name">PiTi Cosmetic</a>
-                    </div>
-                    <div class="col-md-4 my-auto">
-                        <form role="search">
-                            <div class="input-group">
-                                <input type="search" placeholder="Tìm kiếm sản phẩm" class="form-control" />
-                                <button class="btn bg-white" type="submit">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-md-5 my-auto">
-                        <ul class="nav d-flex justify-content-between align-items-center">
-
-                            <li class="nav-bar-item">
-                                <a href="../user/cart/index.html">
-                                    <i class="fa fa-shopping-cart"><span> </span>
-                                        <span id="number-cart">1</span>
-                                    </i>
-                                </a>
-                            </li>
-                            <li class="nav-bar-item">
-                                <a href="../../pages/product/san-pham-yeu-thich.html">
-                                    <i class="fa fa-heart"></i>
-                                    Yêu thích
-                                </a>
-                            </li>
-                            <li class="nav-bar-item" id="info-user">
-                                <a href="../../user/account.html/account.html">
-                                    <i class="fa fa-user"></i>
-                                    Tài khoản
-                                </a>
-
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+  <div class="main-navbar">
+    <div class="top-navbar">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 my-auto d-none d-sm-none d-md-block d-lg-block">
+            <a href="/" class="brand-name">PiTi Cosmetic</a>
+          </div>
+          <div class="col-md-4 my-auto">
+            <form id="product-search-form" role="search">
+              <div class="input-group">
+                <input type="search" id="search-input" placeholder="Tìm kiếm sản phẩm" class="form-control" />
+                <button onclick="handleSearch()" class="btn bg-white" type="submit">
+                  <i class="fa fa-search"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="col-md-5 my-auto">
+            <ul class="nav d-flex justify-content-between align-items-center">
+              <li class="nav-bar-item">
+                <a href="./pages/user/cart/index.html">
+                  <i class="fa fa-shopping-cart"><span> </span>
+                    <!-- <span id="number-cart">1</span> -->
+                  </i>
+                </a>
+              </li>
+              <li class="nav-bar-item">
+                <a href="./pages/product/san-pham-yeu-thich.html">
+                  <i class="fa fa-heart"></i>
+                  Yêu thích
+                </a>
+              </li>
+              <li class="nav-bar-item" id="info-user">
+                <a href="./auth/login.html/index.html">
+                  <i class="fa fa-user"></i>
+                  Tài khoản
+                </a>
+              </li>
+              <li class="nav-bar-item" id="user-logout">
+                <a href="">
+                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+    </div>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-block d-sm-block d-md-none d-lg-none" href="../index.html">
@@ -158,5 +161,5 @@
             </div>
         </div>
     </div>
-    <script src="../js/check-login.js"></script>
+    <script src="/assets/js/check-login.js"></script>
 </footer>
